2002-11-27  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Creation of python extension modules now works.  Replaced the
	  setup.py method (which had some cross-platform question marks)
	  with a libtools method.

	* Fixed build of xwin_drv.so so it links to libplplot.  Without this
	  the python examples won't work with the xwin driver.
	
	* Install of python examples including new plplot_python_start.py
	  which is configured to make accessible to python the
	  directory which contains the installed plplot python extensions
	  (assuming that might not be in the standard system location).

	* Fixed single precision bugs in bindings/c++/Makefile.am and
	  bindings/f77/Makefile.am.

2002-11-26  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Support for examples/c examples/c++ and examples/f77 on AT
	  branch.
	* Adopt Maurice's idea of initializing libltdl in pllib_init().
	* Makefile.examples using plplot_libtool, c works
	* c++ works (required a fix to linking of libplcxx consistent
	  with hierarchical linking model.)
	* f77 works (required a fix to linking of libplf77 consistent
	  with hierarchical linking model.)

2002-11-25  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Makefile.am files: some reorganization, but mostly adding
	  EXTRA_DIST macros so the distributed tarball generated by
	  make dist has everything it needs.
	* configure.in and /bindings/f77/Makefile.am: Cross-platform 
	  glitches fixed for solaris.

2002-11-24  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Add plConfig.h to installed headers.
	* Remove aclocal.m4 from cvs control (was stale cvs deleted file which
	  is automatically generated in any case with an up-to-date version
	  using ./bootstrap.sh).
	* Makefile.am files: add support for libltdl.
	* include/disptab.h: New PLDispatchInit typedef consistent with lt_ptr.
	* include/plcore.h: Change dlhand type.
	* src/plcore.c: Switch from dlopen API to libltdl API (a fair number