@@ -1,1 +1,10 @@
 *.flc
+Makefile
+Makefile.in
+.deps
+.libs
+*.la
+*.lo
+plrender
+pltek
+pltcl
